--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,9 @@ button:focus-visible {
   padding: 2rem;
   text-align: center;
 }
-
+body{
+  background-color: white;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
